<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="btn_popular_movies">Popular Movies</string>
    <string name="btn_stock_hawk">Stock Hawk</string>
    <string name="btn_build_it_bigger">Build it Bigger</string>
    <string name="btn_make_your_app_material">Make Your App Material</string>
    <string name="btn_go_ubiqutous">Go Ubiquitous</string>
    <string name="btn_capstone">Capstone</string>
    <string name="toast_launch_app">This button will launch my %s app!</string>
    <string name="label_movies">Popular Movies</string>
    <string name="filter">Filter</string>
    <string name="label_movies_detail">Movie Details</string>
    <string name="vote_average">%.3s/10</string>
    <string name="err_msg_no_internet">Something went wrong, please check your internet connection and try again!</string>
    <string name="title_trailers">Trailers</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favorites">Favorites</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
</resources>
