<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_popular_movies"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_popular_movies"
        android:theme="@style/NanoDegreeButton" />

    <Button
        android:id="@+id/btn_stock_hawk"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_stock_hawk"
        android:theme="@style/NanoDegreeButton" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_it_bigger"
        android:theme="@style/NanoDegreeButton" />

    <Button
        android:id="@+id/btn_make_your_app_material"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_make_your_app_material"
        android:theme="@style/NanoDegreeButton" />

    <Button
        android:id="@+id/btn_go_ubiqutous"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_ubiqutous"
        android:theme="@style/NanoDegreeButton" />

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:theme="@style/NanoDegreeButton" />

</LinearLayout>
